--- a/UmbCheckout.StarterKit.Web/Views/_ViewImports.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/_ViewImports.cshtml
@@ -7,3 +7,7 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Smidge
 @inject Smidge.SmidgeHelper SmidgeHelper
+@addTagHelper *, Our.Umbraco.TagHelpers
+@addTagHelper *, OurHtagEditor
+@using UmbNav.Core
+@addTagHelper *, UmbNav.Core
