--- a/UmbCheckout.StarterKit.Web/Views/_Master.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/_Master.cshtml
@@ -23,22 +23,22 @@
     <partial name="Partials/nav/TopNavigation" />
 
     @RenderBody()
-    <div class="container">
-        <footer class="py-5">
+    <footer class="py-5 bg-dark-subtle">
+        <div class="container">
             <div class="row">
                 <partial name="Partials/nav/FooterNavigation" />
 
                 <div class="col-md-5 offset-md-1 mb-3">
-                    <partial name="Partials/nav/MailChimpSignup"/>
+                    <partial name="Partials/nav/MailChimpSignup" />
                 </div>
             </div>
 
             <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
                 <p>@(Model.GetSiteSettings().Value<string>("copyright").Replace("[[SITENAME]]", Model.GetSiteSettings().Value<string>("siteName")).Replace("[[YEAR]]", DateTime.Now.Year.ToString()))</p>
-                <partial name="Partials/nav/SocialIcons"/>
+                <partial name="Partials/nav/SocialIcons" />
             </div>
-        </footer>
-    </div>
+        </div>
+    </footer>
     <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     @await RenderSectionAsync("BodyEnd", false)
 </body>
