--- a/UmbCheckout.StarterKit.Web/Views/_ViewImports.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/_ViewImports.cshtml
@@ -4,10 +4,12 @@
 @using Umbraco.Cms.Web.Common.Views
 @using Umbraco.Cms.Core.Models.PublishedContent
 @using Microsoft.AspNetCore.Html
+@using UmbNav.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Smidge
 @inject Smidge.SmidgeHelper SmidgeHelper
 @addTagHelper *, Our.Umbraco.TagHelpers
 @addTagHelper *, OurHtagEditor
-@using UmbNav.Core
 @addTagHelper *, UmbNav.Core
+@addTagHelper *, UmbCheckout.Core
+@addTagHelper *, UmbCheckout.Stripe
