--- a/UmbCheckout.StarterKit.Web/Views/Partials/nav/TopNavigation.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Partials/nav/TopNavigation.cshtml
@@ -31,7 +31,11 @@
                         </li>
                     }
                 }
+                <li class="nav-item">
+                    <vc:basket-link basket-alias="basket" link-name="Basket" link-css-class="nav-link"></vc:basket-link>
+                </li>
             </ul>
+
             <form role="search">
                 <input class="form-control" type="search" placeholder="Search" aria-label="Search">
             </form>
