--- a/UmbCheckout.StarterKit.Web/Views/Basket.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Basket.cshtml
@@ -34,8 +34,18 @@
         </div>
     </div>
 </section>
-<div class="py-5">
+<div class="py-5 bg-body-tertiary">
     <div class="container">
+        @if (TempData["UmbCheckout_Added_To_Basket"] != null)
+        {
+            <div class="row mb-4">
+                <div class="col-12">
+                    <div class="alert alert-success">
+                        Successfully added @UmbracoContext.Content.GetById((Guid)TempData["UmbCheckout_Added_To_Basket"]).Name to basket.
+                    </div>
+                </div>
+            </div>
+        }
         <vc:stripe-basket table-css-class="table table-striped table-hover" checkout-button-css-class="btn btn-primary" increase-button-css-class="btn btn-outline-secondary" reduce-button-css-class="btn btn-outline-secondary" remove-button-css-class="btn btn-outline-secondary"></vc:stripe-basket>
     </div>
 </div>
