--- a/UmbCheckout.StarterKit.Web/Views/Product.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Product.cshtml
@@ -1,4 +1,4 @@
-﻿@using Umbraco.Cms.Core.Models
+@using Umbraco.Cms.Core.Models
 @using Umbraco.Cms.Core.Models.Blocks
 @using Umbraco.Cms.Core.Strings
 @using UmbCheckout.Stripe.Controllers.Surface
@@ -34,6 +34,16 @@
 </section>
 <div class="py-5 bg-body-tertiary">
     <div class="container">
+        @if (TempData["UmbCheckout_Added_To_Basket"] != null)
+        {
+            <div class="row mb-4">
+                <div class="col-12">
+                    <div class="alert alert-success">
+                        Successfully added @UmbracoContext.Content.GetById((Guid)TempData["UmbCheckout_Added_To_Basket"]).Name to basket.
+                    </div>
+                </div>
+            </div>
+        }
         <div class="row">
             <div class="col-6">
                 <div id="productPhotos" class="carousel slide">
