--- a/UmbCheckout.StarterKit.Web/Views/Product.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Product.cshtml
@@ -1,4 +1,4 @@
-@using Umbraco.Cms.Core.Models
+﻿@using Umbraco.Cms.Core.Models
 @using Umbraco.Cms.Core.Models.Blocks
 @using Umbraco.Cms.Core.Strings
 @using UmbCheckout.Stripe.Controllers.Surface
@@ -66,15 +66,16 @@
                 </div>
             </div>
             <div class="col-5 offset-1">
-                <div class="h3">@(Model.Value<decimal>("umbCheckoutPrice").ToString("C"))</div>
+                <p class="h3 mb-3">@(Model.Value<decimal>("umbCheckoutPrice").ToString("C"))</p>
+                <p><strong>Categories: </strong> @string.Join(", ", Model.Value<IEnumerable<IPublishedContent>>("categories")?.Select(x => x.Value<string>("categoryName")))</p>
                 @using (Html.BeginUmbracoForm<StripeBasketController>(nameof(StripeBasketController.Add), FormMethod.Post))
                 {
                     <div class="mb-3">
                         <label for="quantity" class="form-label">@Umbraco.GetDictionaryValue("Quantity Label")</label>
                         <input class="form-control" type="number" name="quantity" value="1" min="1">
                     </div>
-                    <input type="hidden" name="id" value="@Model.Key" />
-                    <input type="hidden" name="currencyCode" value="@iso4217Code" />
+                    <input type="hidden" name="id" value="@Model.Key"/>
+                    <input type="hidden" name="currencyCode" value="@iso4217Code"/>
                     <button class="btn btn-primary" type="submit">@Umbraco.GetDictionaryValue("Add to Basket Button")</button>
                 }
                 @if (Model.HasValue("features"))
