--- a/UmbCheckout.StarterKit.Web/Views/Partials/blocklist/Components/recentProductsBlock.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Partials/blocklist/Components/recentProductsBlock.cshtml
@@ -1,18 +1,10 @@
 ﻿@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockListItem>;
 @using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
 @using Umbraco.Cms.Core.Models
-@using Umbraco.Cms.Core.PropertyEditors.ValueConverters
 @{
     var content = Model.Content;
-    var settings = Model.Settings;
-
-    var backgroundColour = string.Empty;
-    if (settings != null && settings.HasProperty("backgroundColour") && settings.HasValue("backgroundColour"))
-    {
-        backgroundColour = $"bg-{settings.Value<ColorPickerValueConverter.PickedColor>("backgroundColour")?.Label.ToLower().Replace(" ", "-")}";
-    }
 }
-<div class="py-5 @backgroundColour">
+<div class="py-5">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 text-center">
@@ -21,13 +13,13 @@
             </div>
         </div>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 mt-3">
-            @if (content.Value("featuredProducts") != null && content.Value<IEnumerable<IPublishedContent>>("featuredProducts").Any())
+            @if (content.Value("recentProducts") != null)
             {
-                foreach (var product in content.Value<IEnumerable<IPublishedContent>>("featuredProducts"))
+                foreach (var product in content.Value<IPublishedContent>("recentProducts").Children())
                 {
                     <div class="col d-flex">
                         <div class="card shadow-sm">
-                            <img class="card-img-top"  src="@(product.Value<IEnumerable<MediaWithCrops>>("photos").FirstOrDefault().GetCropUrl("thumbnail"))" role="img" preserveAspectRatio="xMidYMid slice" focusable="false" />
+                            <img class="card-img-top" src="@(product.Value<IEnumerable<MediaWithCrops>>("photos").FirstOrDefault().GetCropUrl("thumbnail"))" role="img" preserveAspectRatio="xMidYMid slice" focusable="false" />
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">@product.Value("productName")</h5>
                                 <p class="card-text flex-grow-1">@(product.Value<string>("description")?.Truncate(265))</p>
