Background colour picker

--- a/UmbCheckout.StarterKit.Web/Views/Partials/blocklist/Components/recentProductsBlock.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Partials/blocklist/Components/recentProductsBlock.cshtml
@@ -1,10 +1,18 @@
 ﻿@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockListItem>;
 @using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
 @using Umbraco.Cms.Core.Models
+@using Umbraco.Cms.Core.PropertyEditors.ValueConverters
 @{
     var content = Model.Content;
+    var settings = Model.Settings;
+
+    var backgroundColour = string.Empty;
+    if (settings != null && settings.HasProperty("backgroundColour") && settings.HasValue("backgroundColour"))
+    {
+        backgroundColour = $"bg-{settings.Value<ColorPickerValueConverter.PickedColor>("backgroundColour")?.Label.ToLower().Replace(" ", "-")}";
+    }
 }
-<div class="py-5">
+<div class="py-5 @backgroundColour">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 text-center">
