Changed to show subtotal

--- a/UmbCheckout.StarterKit.Web/Views/Partials/nav/TopNavigation.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Partials/nav/TopNavigation.cshtml
@@ -34,7 +34,7 @@
                     }
                 }
                 <li class="nav-item">
-                    <vc:basket-link basket-alias="basket" link-name="Basket" link-css-class="nav-link"></vc:basket-link>
+                    <vc:basket-link basket-alias="basket" link-name="Basket" link-type="SubTotal" link-css-class="nav-link"></vc:basket-link>
                 </li>
             </ul>
 
