--- a/UmbCheckout.StarterKit.Web/Views/_ViewImports.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/_ViewImports.cshtml
@@ -13,3 +13,4 @@
 @addTagHelper *, UmbNav.Core
 @addTagHelper *, UmbCheckout.Core
 @addTagHelper *, UmbCheckout.Stripe
+@addTagHelper *, LazZiya.TagHelpers
