--- a/UmbCheckout.StarterKit.Web/Views/Partials/nav/TopNavigation.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Partials/nav/TopNavigation.cshtml
@@ -38,8 +38,8 @@
                 </li>
             </ul>
 
-            <form role="search">
-                <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+            <form role="search" method="get" action="@Model.GetProductsPage()?.Url()#results">
+                <input class="form-control" name="keywords" type="search" placeholder="@Umbraco.GetDictionaryValue("Search Products Placeholder")" aria-label="Search">
             </form>
         </div>
     </div>
