--- a/UmbCheckout.StarterKit.Web/Views/Products.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Products.cshtml
@@ -92,7 +92,7 @@
                 {
                     <div class="row mt-3">
                         <div class="col">
-                            @(Model.Content.Value<IHtmlEncodedString>("noProductsFoundMessage"))
+                            @(Model.Content.Value<IHtmlEncodedString>("noProductsMessage"))
                         </div>
                     </div>
                 }
