--- a/UmbCheckout.StarterKit.Web/Views/Basket.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Basket.cshtml
@@ -4,36 +4,7 @@
 @{
 	Layout = "_Master.cshtml";
 }
-<section class="py-5 text-center">
-    <div class="container">
-        <div class="row py-lg-5">
-            <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">
-                    @{
-                        if (Model.HasValue("heroHeading"))
-                        {
-                            @(Model.Value<string>("heroHeading"))
-                        }
-                        else
-                        {
-                            @Model.Name
-                        }
-                    }
-                </h1>
-                @(Model.Value("heroIntroduction"))
-                @if (Model.HasValue("heroButtons"))
-                {
-                    <p>
-                        @foreach (var button in Model.Value<IEnumerable<BlockListItem>>("heroButtons")?.Select(x => x.Content))
-                        {
-                            <a href="@(button.Value<Link>("link").Url)" target="@(button.Value<Link>("link").Target)" class="btn @button.Value("type") my-2">@(button.Value<Link>("link").Name)</a>
-                        }
-                    </p>
-                }
-            </div>
-        </div>
-    </div>
-</section>
+<partial name="Partials/Hero" />
 <div class="py-5 bg-body-tertiary">
     <div class="container">
         @if (TempData["UmbCheckout_Added_To_Basket"] != null)
