--- a/UmbCheckout.StarterKit.Web/Views/_ViewImports.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/_ViewImports.cshtml
@@ -14,3 +14,4 @@
 @addTagHelper *, UmbCheckout.Core
 @addTagHelper *, UmbCheckout.Stripe
 @addTagHelper *, LazZiya.TagHelpers
+@addTagHelper *, UmbCheckout.StarterKit.Web
