--- a/UmbCheckout.StarterKit.Web/Views/ContentPage.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/ContentPage.cshtml
@@ -3,25 +3,5 @@
 @{
     Layout = "_Master.cshtml";
 }
-<section class="py-5 text-center">
-    <div class="container">
-        <div class="row py-lg-5">
-            <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">
-                    @{
-                        if (Model.HasValue("heroHeading"))
-                        {
-                            @(Model.Value<string>("heroHeading"))
-                        }
-                        else
-                        {
-                            @Model.Name
-                        }
-                    }
-                </h1>
-                @(Model.Value("heroIntroduction"))
-            </div>
-        </div>
-    </div>
-</section>
+<partial name="Partials/Hero" />
 @await Html.GetBlockListHtmlAsync(Model.Value<BlockListModel>("contentBlocks"))
