--- a/UmbCheckout.StarterKit.Web/Views/NotFoundPage.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/NotFoundPage.cshtml
@@ -1,6 +1,15 @@
-﻿@using Umbraco.Cms.Web.Common.PublishedModels;
-@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.NotFoundPage>
-@using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
+﻿@using Umbraco.Cms.Core.Strings
+@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage
 @{
 	Layout = "_Master.cshtml";
 }
+<partial name="Partials/Hero" />
+<div class="py-5 bg-body-tertiary">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-10">
+                @(Model.Value<IHtmlEncodedString>("text"))
+            </div>
+        </div>
+    </div>
+</div>
